@@ -58616,6 +58616,23 @@
     "order": ""
   },
   {
+    "emoji": "🇪🇴",
+    "hexcode": "1F1EA-1F1F4",
+    "group": "extras-unicode",
+    "subgroups": "subdivision-flag",
+    "annotation": "esperanto flag",
+    "tags": "",
+    "openmoji_tags": "constructed, Zamenhof",
+    "openmoji_author": "Carlin MacKenzie",
+    "openmoji_date": "2020-04-08",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "?",
+    "order": ""
+  },
+  {
     "emoji": "🏴󠁵󠁳󠁴󠁸󠁿",
     "hexcode": "1F3F4-E0075-E0073-E0074-E0078-E007F",
     "group": "extras-unicode",
